--- a/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
+++ b/translations/kangyur/translations/043-009_toh72-sutra_of_viradattas_questions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2022</date>
+                <edition>v 1.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-11T10:04:35.592Z" user="admin">11/06/2022 10:04:35</note>
+                <note type="lastUpdated" date-time="2022-07-10T18:29:11.006Z" user="admin">10/07/2022 18:29:11</note>
 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-03-22T09:22:03.132Z" user="line-tofte">2.h</note>
@@ -112,6 +112,7 @@
     <note type="updated" update="text-version" value="1.0.0" date-time="2022-06-09T14:37:00.797Z" user="andre">First published version</note>
     <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-10T10:48:55.38Z" user="john">Some minor edits and line spaces added.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-11T10:04:31.779Z" user="andre">Glossary status changed - activated in CG</note>
+    <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-10T18:29:07.222Z" user="john">Harmonization of trailer and colophon</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1142,8 +1143,10 @@
                         the name of this Dharma discourse? How should we remember it?” </p>
                     <milestone unit="chunk" xml:id="UT22084-043-009-147"/>
                     <p tid="123">The Blessed One replied, “In this regard, Ānanda, this Dharma discourse is called
-                        <title xml:lang="en">The Teaching on the Stages of Yoga for Bodhisattvas</title>,<note place="end" xml:id="UT22084-043-009-148"> That is, teachings on the <title xml:lang="Sa-Ltn">bodhisattva­yogācārabhūmi</title>. Demiéville, 1954, p. 396 has discussed the importance
-                            of this alternative title as an antecedent for <title xml:lang="Sa-Ltn">yogācārabhūmi</title>.</note> and this is how it should be remembered. It should also
+                        <title xml:lang="en">The Teaching on the Stages of Yoga for Bodhisattvas</title>,<note place="end" xml:id="UT22084-043-009-148"> That 
+                            is, teachings on the <title xml:lang="Sa-Ltn">bodhisattva­yogācārabhūmi</title>. Demiéville, 1954, p. 396 has discussed the importance
+                            of this alternative title as an antecedent for <title xml:lang="Sa-Ltn">yogācārabhūmi</title>.</note> and this is how it 
+                        should be remembered. It should also
                         be remembered as <title xml:lang="en">The Questions of Vīradatta</title>. </p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-009-149"/>
@@ -1151,9 +1154,8 @@
                         bodhisattvas, the five hundred householders, and the world with its gods, humans, asuras, and
                         gandharvas all rejoiced and praised what had been proclaimed by the Blessed One. </p>
                     <milestone unit="chunk" xml:id="UT22084-043-009-150"/>
-                    <trailer tid="125">This concludes “The Chapter on the Questions of the Householder Vīradatta,” the
-                        twenty-eighth chapter from the hundred-thousand-chapter Dharma discourse, the noble Great Heap
-                        of Jewels.</trailer>
+                    <trailer tid="125">This concludes <title xml:lang="en">The Questions of the Householder Vīradatta</title>, the
+                        twenty-eighth of the one hundred thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-043-009-colophon">
                     <head type="colophon" tid="126">Colophon</head>
