--- a/translations/kangyur/translations/043-015_toh78-the_sutra_of_gunaratnasankusumitas_questions.xml
+++ b/translations/kangyur/translations/043-015_toh78-the_sutra_of_gunaratnasankusumitas_questions.xml
@@ -36,7 +36,7 @@
                     Dr.</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2021</date>
+                <edition>v 1.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -75,7 +75,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-21T22:02:31.254Z" user="admin">21/04/2021 22:02:31</note>
+                <note type="lastUpdated" date-time="2022-07-10T18:29:51.161Z" user="admin">10/07/2022 18:29:51</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-09-04T18:05:51.405Z" user="james">2.d</note>
                 <note type="updated" update="text-version" value="0.1" date-time="2019-10-06T21:06:42.681Z" user="dion-blundell"/>
                 <note type="updated" update="translation-status" value="2.c" date-time="2019-10-06T21:06:42.681Z" user="dion-blundell">2.c</note>
@@ -101,7 +101,7 @@
     <note type="updated" update="text-version" value="1.0.5" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.0.6" date-time="2021-01-04T21:11:36.24Z" user="laura">Updated colophon to Bandé</note>
     <note type="updated" update="text-version" value="1.0.7" date-time="2021-02-12T18:06:41.182Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.0.8" date-time="2021-04-21T22:02:28.118Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
+    <note type="updated" update="text-version" value="1.0.8" date-time="2021-04-21T22:02:28.118Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>    <note type="updated" update="text-version" value="1.0.9" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.0.10" date-time="2022-07-10T18:29:47.392Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -131,7 +131,8 @@
             </div>
             <div type="introduction">
                 <head type="introduction" tid="6">Introduction</head>
-                <milestone unit="chunk" xml:id="UT22084-043-015-3"/>
+                <div type="section" xml:id="UT22084-043-015-introduction-1">
+                    <milestone unit="chunk" xml:id="UT22084-043-015-3"/>
                 <p tid="7">
                     <title xml:lang="en">The Questions of Guṇaratnasaṅkusumita</title> is primarily
                     concerned with the benefits that arise from remembering the names of various
@@ -178,7 +179,7 @@
                 <p tid="10">
                     <title xml:lang="en">The Questions of Guṇaratnasaṅkusumita</title> is no longer
                     extant in Sanskrit but is included in the Chinese canon.<note place="end" xml:id="UT22084-043-015-109">
-                        <title xml:lang="Zh-Ltn">Gongde bao hua fu pusa hui</title> <title xml:lang="zh">功德寶花敷菩薩會</title> (Taishō 310 [34]). For more
+                            <title xml:lang="Zh-Ltn">Gongde bao hua fu pusa hui</title> <title xml:lang="zh">功德寶花敷菩薩會</title> (Taishō 310 [34]). For more
                         information on this version of the sūtra, see Lewis R. Lancaster, “<ptr target="http://www.acmuller.net/descriptive_catalogue/files/k0022-34.html">K 22(34)</ptr>,” <title xml:lang="en">The Korean Buddhist Canon</title>.</note> It was translated into Chinese
                     sometime between 706 and 713 <hi rend="small-caps">ce</hi> by Bodhiruci (d.
                     727), a renowned translator from South India (who is not to be confused with
@@ -194,6 +195,7 @@
                     translation presented here was based primarily on the Tibetan Degé edition, in
                     consultation with the Comparative Edition (<foreign xml:lang="Bo-Ltn" type="term">dpe bsdur ma</foreign>) and the Stok Palace manuscript
                     edition.</p>
+                </div>
             </div>
         </front>
         <body>
@@ -483,16 +485,14 @@
                         humans, asuras, and gandharvas rejoiced and praised the Buddha’s words.</p>
                     <milestone unit="chunk" xml:id="UT22084-043-015-41"/>
 
-                    <trailer tid="44">This concludes the section of “The Questions of
-                        Guṇaratnasaṅkusumita,” the thirty-fourth section of “The Noble Dharma
-                        Discourse, the Great Heap of Jewels,” in one hundred thousand
-                        sections.</trailer>
+                    <trailer tid="44">This concludes <title xml:lang="en">The Questions of
+                        Guṇaratnasaṅkusumita</title>, the thirty-fourth of the one hundred thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
 
                 </div>
                 <div type="colophon" xml:id="UT22084-043-015-colophon">
                     <head type="colophon" tid="45">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-043-015-42"/>
-                    <p tid="46">This text was translated, edited, and finalized by the Indian
+                    <p tid="46">Translated, edited, and finalized by the Indian
                         scholars Jinamitra and Prajñāvarman, as well as the chief editor-translator
                         Bandé Yeshé Dé and others.</p>
                 </div>
@@ -1027,13 +1027,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-043-015-97">
+                        <gloss xml:id="UT22084-043-015-97" type="place" mode="match">
                             <term>Licchavi</term>
-                            <term xml:lang="Bo-Ltn">lid tsa byi </term>
+                            <term xml:lang="Bo-Ltn" status="verified">lid tsa byi</term>
                             <term xml:lang="bo">ལིད་ཙ་བྱི།</term>
                             <term xml:lang="Sa-Ltn">Licchavi</term>
-                            <term type="definition">An ancient republican state, located in northern
-                                India.</term>
+                            <term type="definition">An ancient republican state, located in northern India.</term>
                         </gloss>
                     </item>
                     <item>
