--- a/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
+++ b/translations/kangyur/translations/044-003_toh83_questions_of_bhadrapala.xml
@@ -27,7 +27,7 @@
     <consultant role="projectManager" ref="contributors.xml#person-115">Dr. Karen Liljenberg</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.38.11 <date>2022</date>
+                <edition>v 1.38.12 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-27T20:29:01.038Z" user="admin">27/06/2022 20:29:01</note>
+                <note type="lastUpdated" date-time="2022-07-10T18:30:58.496Z" user="admin">10/07/2022 18:30:58</note>
             <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37" date-time="2019-06-18T15:53:53.155Z" user="celso">v 1.37 2019</tei:note>
 <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement updated</tei:note>
     <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="v 1.37.2" date-time="2020-04-30T21:32:41.64Z" user="celso">corrected typo in glossary entry: rgyal po'i khab</tei:note>
@@ -78,6 +78,7 @@
     <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.9" date-time="2022-02-15T16:57:00.571Z" user="celso">Corrected a &lt;title&gt; tag</tei:note>
     <tei:note xmlns:tei="http://www.tei-c.org/ns/1.0" type="updated" update="text-version" value="1.38.10" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</tei:note>
     <note type="updated" update="text-version" value="1.38.11" date-time="2022-06-27T20:28:57.223Z" user="martina-cotter">minor update</note>
+    <note type="updated" update="text-version" value="1.38.12" date-time="2022-07-10T18:30:54.694Z" user="john">Harmonization of trailer and colophon</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1266,15 +1267,14 @@
                         merchant Bhadrapāla, as well as the worlds of gods, humans, demi-gods, garuḍas, and gandharvas, rejoiced
                         and praised the words of the Blessed One.</p>
                     <milestone unit="chunk" xml:id="UT22084-044-003-231"/>
-                    <trailer tid="206">This concludes the section of “<title xml:lang="en">The Questions of the Merchant Bhadrapāla</title>,” the thirty-ninth
-                        section of “<title xml:lang="en">The Noble Dharma Discourse, the Great Heap of Jewels</title>,” in one
-                        hundred thousand sections.</trailer>
+                    <trailer tid="206">This concludes <title xml:lang="en">The Questions of the Merchant Bhadrapāla</title>, the thirty-ninth
+                        of the one hundred thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
                 <div type="colophon" xml:id="UT22084-044-003-colophon">
                     <head type="colophon" tid="214">Colophon</head>
                     <milestone unit="chunk" xml:id="UT22084-044-003-152"/>
                     
-                    <p tid="207">This text was translated, edited, and finalized by the Indian preceptors Jinamitra and
+                    <p tid="207">Translated, edited, and finalized by the Indian preceptors Jinamitra and
                         Surendrabodhi, together with the chief editor and translator Bandé Yeshé Dé.</p>
                 </div>
             </div>
