--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-139">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.5 <date>2022</date>
+                <edition>v 1.0.6 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -61,7 +61,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-02T18:21:40.831Z" user="admin">02/03/2022 18:21:40</note>
+                <note type="lastUpdated" date-time="2022-07-10T18:32:06.164Z" user="admin">10/07/2022 18:32:06</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:11:33.474Z" user="mike">2.d</note>
@@ -124,7 +124,7 @@
     <note type="updated" update="text-version" value="1.0.1" date-time="2021-04-09T14:42:49.896Z" user="john">Superfluous English mentions in Chinese fields of the glossary removed.</note>
     <note type="updated" update="text-version" value="1.0.2" date-time="2021-04-09T15:05:23.628Z" user="john">Added a sentence to Introduction.</note>
     <note type="updated" update="text-version" value="1.0.3" date-time="2021-04-20T10:18:59.048Z" user="john">Removed mention in summary of n longer being reborn as a female.</note>
-    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>
+    <note type="updated" update="text-version" value="1.0.4" date-time="2021-09-09T18:34:35.493Z" user="celso">activated pending links </note>    <note type="updated" update="text-version" value="1.0.5" date-time="2022-03-02T18:21:36.617Z" user="celso">removed a glossary entry with no  location. recached to fix note on dist.</note>    <note type="updated" update="text-version" value="1.0.6" date-time="2022-07-10T18:32:02.374Z" user="john">Harmonization of trailer and colophon</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1406,8 +1406,8 @@
                         world with its gods, men, and asuras, rejoiced in the words of the Blessed One and praised them greatly. <ref cRef="F.104.b" type="folio" xml:id="UT22084-044-004-359"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-044-004-262"/>
-                    <trailer tid="162">This completes the fortieth chapter, called The Questions of the Girl Vimalaśraddhā, from the one hundred
-                        thousand chapters of Dharma discourses in The Noble Great Heap of Jewels.<note place="end" xml:id="UT22084-044-004-263"> As
+                    <trailer tid="162">This concludes <title xml:lang="en">The Questions of the Girl Vimalaśraddhā</title>, the fortieth of the one hundred thousand sections 
+                        of the Dharma discourse known as The Noble Great Heap of Jewels.<note place="end" xml:id="UT22084-044-004-263"> As
                             noted above, the Narthang, Lhasa, and Stok Palace versions state in the colophon that this text was translated, edited,
                             and finalized based on a Chinese text by the translator Gö Chödrup: <foreign xml:lang="Bo-Ltn" type="quote">lo tstsha ba
                                 ’gos chos grub kyis rgya nag gi dpe las bsgyur cing zhus te/ gtan la phab pa/</foreign> (Comparative Edition, p. 288,
