--- a/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
+++ b/translations/kangyur/placeholders/096-054_toh805-the_tantra_the_questions_of_subahu.xml
@@ -18,10 +18,10 @@
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-096-054"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-01-24T09:30:05.557Z" user="admin">24/01/2022 09:30:05</note>
+                <note type="lastUpdated" date-time="2022-07-11T08:40:56.582Z" user="admin">11/07/2022 08:40:56</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T08:42:54.93Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:42:03.731Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -58,6 +58,8 @@
     <note type="updated" update="translation-status" value="2.d" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">2.d</note>
 
     <note type="updated" update="text-version" value="0.0.9" date-time="2022-01-24T09:29:57.424Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">2.c</note>
+    <note type="updated" update="text-version" value="0.0.10" date-time="2022-07-11T08:40:49.03Z" user="line-tofte">Auto (update-publication-status)</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
