--- a/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
+++ b/translations/kangyur/placeholders/090-045_toh601,884-the_incantation_of_the_reliquary.xml
@@ -18,10 +18,10 @@
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2021</date>
+                <edition>v 0.0.11 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-090-045"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +46,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-28T13:25:07.777Z" user="admin">28/06/2022 13:25:07</note>
+                <note type="lastUpdated" date-time="2022-07-11T09:18:38.698Z" user="admin">11/07/2022 09:18:38</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:26:35.738Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:24:28.861Z" user="line-tofte">3</note>
@@ -63,6 +63,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-06-21T14:34:45.797Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2022-06-28T13:25:00.213Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2022-06-28T13:25:00.213Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2022-07-11T09:18:31.17Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
