--- a/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
+++ b/translations/kangyur/placeholders/071-002_toh288-the_great_sutra_of_illusions_net.xml
@@ -4,18 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">māyājālasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Great Sūtra of Illusion's Net</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba zhes bya ba</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">māyājālasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">māyājālanāmamahāsūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-            <author role="translatorEng" ref="contributors.xml#person-72">Oriane Lavolé</author>
-                <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="otherTitle" xml:lang="Bo-Ltn">mdo chen sgyu ma'i dra ba zhes bya ba</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-72">Oriane Lavolé</author>
+                <editor role="reviser" ref="eft:person-274">Adam Krug</editor>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -35,10 +35,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:15:14.527Z" user="admin">30/04/2020 08:15:14</note>
-            <note type="updated" update="text-version" value="" date-time="2019-04-29T17:15:40.869Z" user="john"/>
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-02-11T09:35:06.396Z" user="andreas">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-02-11T09:35:06.396Z" user="andreas">2.h</note>
+                <note type="lastUpdated" date-time="2022-07-11T12:14:30.679Z" user="admin">11/07/2022 12:14:30</note>
+                <note type="updated" update="text-version" value="" date-time="2019-04-29T17:15:40.869Z" user="john"/>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-02-11T09:35:06.396Z" user="andreas">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-02-11T09:35:06.396Z" user="andreas">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-11T12:14:28.696Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
