--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -96,7 +96,7 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.7 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -138,7 +138,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-07T06:43:42.609Z" user="admin">07/06/2022 06:43:42</note>
+        <note type="lastUpdated" date-time="2022-07-12T22:14:43.662Z" user="admin">12/07/2022 22:14:43</note>
 
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
@@ -180,6 +180,7 @@
         <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-18T06:43:28.103Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="2" date-time="2022-06-07T06:43:34.636Z" user="line-tofte">2</note>
           <note type="updated" update="text-version" value="0.0.6" date-time="2022-06-07T06:43:34.636Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-12T22:14:39.807Z" user="martina-cotter">Updated folio error</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -6685,7 +6686,8 @@
             <l>“For the sake of other beings’ minds, </l>
             <l>You relinquish<note place="end" xml:id="UT22084-066-015-969"> Translation based on
                 Yongle, Narthang, Choné, Lhasa, and Stok: <foreign xml:lang="Bo-Ltn" type="quote">btang</foreign>. Degé: <foreign xml:lang="Bo-Ltn" type="quote">gtar</foreign>
-                (“to bleed”).</note> their suffering. F.224.b]</l>
+              (“to bleed”).</note> their suffering. <ref cRef="F.224.b" type="folio" xml:id="UT22084-066-015-1602"/>
+                        </l>
             <l>Just so, the nāgas in this place are endlessly afflicted </l>
             <l>By much suffering caused by delusion.</l>
           </lg>
