--- a/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
+++ b/translations/kangyur/placeholders/094-005_toh728-the_hundred_and_eight_names_of_tara.xml
@@ -17,11 +17,11 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.10 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-094-005"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-07T09:28:09.001Z" user="admin">07/07/2022 09:28:09</note>
+                <note type="lastUpdated" date-time="2022-07-13T09:05:27.988Z" user="admin">13/07/2022 09:05:27</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:56:38.631Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:56:38.631Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-05-28T13:10:21.844Z" user="line-tofte">2.h</note>
@@ -56,6 +56,8 @@
                 <note type="updated" update="translation-status" value="2.b" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.1.8" date-time="2022-07-07T09:27:25.264Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.9" date-time="2022-07-07T09:28:01.384Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-07-13T09:05:20.423Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.1.10" date-time="2022-07-13T09:05:20.423Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
