--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -36,16 +36,16 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-                        <publicationStmt status="2.a">
-                                <publisher>
+                        <publicationStmt status="2">
+                <publisher>
                     <name>84000: Translating the Words of the Buddha</name>
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability>
+                <availability>
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -57,12 +57,12 @@
                                                   details, see the Creative Commons license.</p>
                                         </licence>
                                 </availability>
-                                <idno xml:id="UT22084-043-004"/>
-                                <note>An early mistake in the assigning of UT numbers within the
+                <idno xml:id="UT22084-043-004"/>
+                <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2022-07-04</date>
-                        </publicationStmt>
+                <date>2022-07-04</date>
+            </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh67" type="text">
                                         <ref>Toh 67</ref>
@@ -80,7 +80,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-07-10T18:24:10.466Z" user="admin">10/07/2022 18:24:10</note>
+                                <note type="lastUpdated" date-time="2022-07-13T13:36:17.21Z" user="admin">13/07/2022 13:36:17</note>
                                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v
                                         0.1.0</note>
                                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
@@ -119,6 +119,8 @@
                                 <note type="updated" update="text-version" value="0.1.14" date-time="2022-06-29T13:07:22.573Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                             <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-10T18:24:06.595Z" user="john">Harmonization of trailer and colophon</note>
+                            <note type="updated" update="translation-status" value="2" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">2</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-13T13:36:11.029Z" user="line-tofte">Auto (update-publication-status)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
