--- a/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
+++ b/translations/kangyur/translations/040-006_toh55-the_complete_effulgence_of_light_teaching.xml
@@ -27,10 +27,10 @@
                 <sponsor ref="sponsors.xml#sponsor-188">晓培</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2022</date>
+                <edition>v 1.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="1.a">
+            <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into modern languages, and to make them
                     available to everyone. </publisher>
@@ -57,7 +57,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-10T13:01:44.339Z" user="admin">10/07/2022 13:01:44</note>
+                <note type="lastUpdated" date-time="2022-07-14T10:20:25.797Z" user="admin">14/07/2022 10:20:25</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:34.942Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-11-24T14:41:09.015Z" user="line-tofte">2.g</note>
@@ -87,7 +87,9 @@
                 <note type="updated" update="text-version" value="1.0.0" date-time="2022-06-24T07:16:50.481Z" user="andre">First published version</note>
                 <note type="updated" update="text-version" value="1.0.1" date-time="2022-06-24T07:21:52.956Z" user="andre">Glossary "excluded status" removed. Now active in CG.</note>
                 <note type="updated" update="text-version" value="1.0.2" date-time="2022-06-29T15:59:40.864Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-10T13:01:40.379Z" user="john">Harmonization of trailer and colophon</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2022-07-10T18:56:00.584Z" user="john">Harmonization of trailer and colophon</note>
+                <note type="updated" update="translation-status" value="1" date-time="2022-07-14T10:20:17.679Z" user="sameer">1</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-14T10:20:17.679Z" user="sameer">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -9671,8 +9673,8 @@
                     <p tid="1279">When the Blessed One had spoken, Candraprabhakumārabhūta, the world with all its gods, humans, asuras, and gandharvas, and all the great assemblies rejoiced and
                         praised the words of the Blessed One.</p>
                     <milestone unit="chunk" xml:id="UT22084-040-006-1598"/>
-                    <trailer tid="1280">This concludes the chapter called “The Teaching on the Effulgence of Light.” <ref cRef="F.255.b" type="folio" xml:id="UT22084-040-006-1825"/> It is the eleventh
-                        chapter within the one hundred thousand sections in the Dharma discourse known as “The Noble Great Heap of Jewels.”</trailer>
+                    <trailer tid="1280">This concludes <title xml:lang="en">The Teaching on the Effulgence of Light</title>, <ref cRef="F.255.b" type="folio" xml:id="UT22084-040-006-1825"/> the eleventh
+                        of the one hundred thousand sections of the Dharma discourse known as The Noble Great Heap of Jewels.</trailer>
                 </div>
             </div>
         </body>
