--- a/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
+++ b/translations/kangyur/placeholders/049-004_toh109-the_sutra_on_the_mountain_gayasirsa.xml
@@ -18,9 +18,10 @@
                 <editor role="reviser" ref="eft:person-187">Steven Rhodes</editor>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-66">Joseph McClellan</editor>
+                <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -40,12 +41,18 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-14T10:59:42.758Z" user="admin">14/07/2022 10:59:42</note>
-            
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v 0.1.0</note>
-<note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
-    <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-12T08:30:54.373Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-19T09:08:44.506Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.1.3" date-time="2022-04-13T11:13:24.357Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-05-23T09:25:56.87Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.1.4" date-time="2022-05-23T09:25:56.87Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.1.5" date-time="2022-05-23T09:26:35.191Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.d" date-time="2022-07-14T10:59:36.84Z" user="line-tofte">2.d</note>    <note type="updated" update="text-version" value="0.1.6" date-time="2022-07-14T10:59:36.84Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2022-07-14T11:00:23.517Z" user="admin">14/07/2022 11:00:23</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-08T07:42:51.906Z" user="andreas">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:59.245Z" user="mike">2.f</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2020-10-12T08:30:54.373Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2020-10-19T09:08:44.506Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2022-04-13T11:13:24.357Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2022-05-23T09:25:56.87Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2022-05-23T09:25:56.87Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2022-05-23T09:26:35.191Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2022-07-14T10:59:36.84Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2022-07-14T10:59:36.84Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.7" date-time="2022-07-14T11:00:21.472Z" user="line-tofte">Auto (update-contributors)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
