--- a/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
+++ b/translations/kangyur/placeholders/034-007_toh19,554-the_perfection_of_wisdom_for_kausika.xml
@@ -19,10 +19,10 @@
                 <editor role="projectEditor" ref="contributors.xml#person-289">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2021</date>
+                <edition>v 0.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-034-007"/>
                 <date/>
             </publicationStmt>
@@ -47,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-05T07:26:50.409Z" user="admin">05/04/2022 07:26:50</note>
+                <note type="lastUpdated" date-time="2022-07-14T13:28:14.519Z" user="admin">14/07/2022 13:28:14</note>
     <note type="updated" update="translation-status" value="3" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">3</note>
     <note type="updated" update="text-version" value="0.0.1" date-time="2021-06-08T09:30:26.839Z" user="line-tofte">0.0.1</note>
     <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-08T09:38:10.747Z" user="line-tofte">Auto (update-contributors)</note>
@@ -57,7 +57,7 @@
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-09-03T10:20:51.708Z" user="line-tofte">Auto (update-publication-status)</note>
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-09-09T08:25:53.764Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="translation-status" value="2.g" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">2.g</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-09T08:26:49.466Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.0.8" date-time="2022-04-05T07:26:42.801Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-14T13:28:06.742Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
